namespace Dara.Server.Modules.Groups.Application.GetAllGroups;

public record GroupDto(Guid GroupId, string Name);